[package]
name = "wasm_client"
version = "0.1.0"
authors = ["charles"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
arc-swap = "1.2.0"
async-std = "1.9.0"
log = "0.4.11"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "0.3.1"
serde_json = "1.0"
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.20"
rand = "0.8.4"
regex = "1.0.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
ark-groth16 = "0.5.0"
futures = "0.3"
babyjubjub = {path = "../../babyjubjub"}
barnett-smart-card-protocol = {path = "../../barnett-smart-card-protocol"}
proof-essentials = {path = "../../proof-essentials"}
zk-reshuffle = {path = "../../workspace-ark05/zk-reshuffle"}
ark-bn254 = "0.5.0"

texas-holdem = {path = "../../texas-holdem"}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }


# From Workspace
shared-protocol = {path = "../shared-protocol"}


[dependencies.web-sys]
version = "0.3.47"
features = [  
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "RtcSessionDescription",
  "RtcIceGatheringState",
  "RtcIceCredentialType",
  "RtcIceTransportPolicy",
  "RtcConfiguration",
  "Navigator",
  "RtcIceServer",
  "MediaDevices",
  "Window", 
  "Location",
  "Document",
  "MediaStream",
  "Element",
  "MediaStreamConstraints",
  "HtmlVideoElement",
  "HtmlMediaElement", 
  "WebSocket",
  "HtmlButtonElement",
  "HtmlParagraphElement",
  "HtmlLabelElement",
  "EventListener",
  "MouseEvent",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "ProgressEvent",
  "HtmlButtonElement",
  "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
